# OS-Benchmarking-Pytorch

./: .gitignore  linux-lite.info  linux-mint.info  lubuntu.info  main.py  pyproject.toml  ubuntu.info  xubuntu.info
