[project]
name = "benchmark-torch-related"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
index-urls = [
    "https://download.pytorch.org/whl/cpu",
    "https://download.pytorch.org/whl/cu124",
]
dependencies = [
    "numpy>=2.2.5",
    "tensorboard>=2.19.0",
    "torch>=2.6,<2.7",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch" },
]
